Add SasS config

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,5 +7,11 @@
 
 body {
     font: Arial, Helvetica, sans-serif !important;
+    background: #333;
+    color: #fff;
+
+    h1 {
+        font-size:80px;
+    }
 }
 
