Create RepositoryList component

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,12 +6,9 @@
 }
 
 body {
-    font: Arial, Helvetica, sans-serif !important;
-    background: #333;
-    color: #fff;
+    font: 1rem "Helvetica Neue", Arial, sans-serif;
+    color: #121214;
 
-    h1 {
-        font-size:80px;
-    }
+    
 }
 
